# ModelCarControllerAndSimulator

./: Array_ostacoli.txt  CMakeLists.txt  README.md  README.txt  main.c  main.cpp  main.h  micro_functions.h  processing_functions.c  simulation_function.h
src/: main.h  micro_functions.c  processing_functions.h  simulation_function.c
